fix image block alignment with theme.json markup change

--- a/wp-content/themes/core/assets/css/src/theme/layouts/default.pcss
+++ b/wp-content/themes/core/assets/css/src/theme/layouts/default.pcss
@@ -71,7 +71,7 @@ main {
 
 .l-sink {
 
-	& > *:not(.c-block):not(.wp-block-group):not(.alignwide):not(.alignfull) {
+	& > *:not(.c-block):not(.wp-block-group):not(.alignwide):not(.alignfull):not(.wp-block-image) {
 		max-width: var(--grid-width-staggered);
 		width: calc(100% - 2 * var(--grid-gutter-small));
 		margin-left: auto;
