--- a/wp-content/themes/core/assets/css/src/theme/spacing/sink.pcss
+++ b/wp-content/themes/core/assets/css/src/theme/spacing/sink.pcss
@@ -41,8 +41,8 @@
 		margin-top: var(--spacer-60);
 		margin-bottom: var(--spacer-60);
 
-		.alignleft,
-		.alignright {
+		&.alignleft,
+		&.alignright {
 			margin-top: var(--spacer-40);
 			margin-bottom: var(--spacer-40);
 
